# gba-mario

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
asset_out/: coin-export.sprite  coin.sprite  mario.sprite  score.sprite  shared.palette  tileset.sprite  tileset1.sprite
assets/: tileset.aseprite
src/: allocator.rs  assets.rs  color.rs  effects.rs  ewramstring.rs  fixed_bag.rs  fixed_queue.rs  fixed_string.rs  fmt.rs  keys.rs  level.rs  level_manager.rs  lib.rs  logger.rs  main.rs  math.rs  obj.rs  player.rs  rng.rs  score.rs  screen.rs  screen_text.rs  static_init.rs  tick.rs  topbar.rs
src/effects/: coin_up.rs  mod.rs  points.rs  tile_bounce.rs
src/levels/: mod.rs  shared.rs
