[package]
name = "mario"
version = "0.1.0"
edition = "2024"

[dependencies]
gba = "0.14.1"
num_enum = {version = "=0.7.4", default-features = false}
paste = "1.0.15"
rand_xoshiro = "0.6"
voladdress = "1.4.0"


[package.metadata.docs.rs]
default-target = "thumbv4t-none-eabi"
cargoflags = ["-Zbuild-std=core"]
rustdoc-args = ["--cfg","docs_rs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
opt-level = "z"

[profile.release-thin]
inherits = "release"
lto = "thin"       # or "thin" for faster compile, "fat" for max optimization

[profile.release-fat]
inherits = "release"
lto = "fat"       # or "thin" for faster compile, "fat" for max optimization
codegen-units = 1 # lets LLVM see the whole crate at once
